# sd-alert-pipe

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
sd_alert_pipe/: alerce.py  antares.py  common.py  config.py  exceptions.py  lasair.py  mars.py  tns.py
tests/: test_sd_alert_pipe.py
